<resources>
    <string name="app_name">GladeSession</string>
    <string name="pci_dss_compliant">PCI-DSS COMPLIANT</string>
    <string name="secured_by_gladepay">Secured by GladePay</string>
    <string name="pay_using">PAY USING</string>
    <string name="bank">Bank</string>
    <string name="qr_pay">QR Pay</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="ussd">USSD</string>
    <string name="card">Card</string>
    <string name="generate_demo_card_details">Generate Demo Card Details</string>
    <string name="pay_ngn_50_00">PAY NGN 50.00</string>
</resources>
