<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_marginTop="32dp"
        android:id="@+id/card_view"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/darker_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_using"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card"
                    android:paddingLeft="1dp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_credit_card_black_24dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ussd"
                    android:paddingLeft="1dp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_credit_card_black_24dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank"
                    android:paddingLeft="1dp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_account_balance_black_24dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_pay"
                    android:paddingLeft="1dp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_credit_card_black_24dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:paddingLeft="1dp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_money"
                    android:paddingLeft="1dp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_local_atm_black_24dp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="CARD NUMBER"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/generate"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:text="@string/generate_demo_card_details"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:padding="12dp"
                    android:background="@drawable/btn_bg_gradient_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/payngn"
                    android:textColor="@android:color/white"
                    android:text="@string/pay_ngn_50_00"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:padding="12dp"
                    android:background="@drawable/btn_bg_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/pci"
        android:layout_below="@id/card_view"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pci_dss_compliant"
        android:drawableLeft="@drawable/ic_lock_black_24dp"/>

    <TextView
        android:id="@+id/secured"
        android:layout_below="@id/pci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/secured_by_gladepay"/>

</RelativeLayout>